--- a/sportchemy/layouts/partials/blocks/sportchemy-collection.html
+++ b/sportchemy/layouts/partials/blocks/sportchemy-collection.html
@@ -52,7 +52,7 @@ sections:
     design:
       # Choose a listing view from:
       # sportchemy-card-view, sportchemy-table-view
-      view: sportchemy-card
+      view: sportchemy-card-view
       view_params:
         # additional parameters specific to each view
       # Choose single or dual column layout
