add share cal buttons

--- a/sportchemy/assets/scss/blocks/sportchemy.scss
+++ b/sportchemy/assets/scss/blocks/sportchemy.scss
@@ -101,3 +101,12 @@
 .sportchemy-calendar {
     padding-top: 1em;
 }
+
+// sportchemy button (share calendar)
+
+.sportchemy-buttons {
+    text-align: right;
+}
+a.sportchemy-btn {
+    text-decoration: none;
+}
