date and time format in sportchemy views

--- a/sportchemy/layouts/partials/blocks/sportchemy-collection.html
+++ b/sportchemy/layouts/partials/blocks/sportchemy-collection.html
@@ -55,6 +55,8 @@ sections:
       view: sportchemy-card-view
       view_params:
         # additional parameters specific to each view
+        date_format:
+        time_format:
       # Choose single or dual column layout
       columns: '1'
 ---
