share calendar shortcode

--- a/sportchemy/layouts/partials/functions/sportchemy-share_calendar_buttons.html
+++ b/sportchemy/layouts/partials/functions/sportchemy-share_calendar_buttons.html
@@ -8,7 +8,7 @@
 */}}
 
 {{/* Inputs:
-    Calendar page path (eg. "/calendar/my-calendar.md")
+    Calendar page path relative to "content" directory (eg. "/calendar/my-calendar.md")
 */}}
 
 {{ $calendar := site.GetPage . }}
