wider docs content

--- a/docs/assets/scss/custom.scss
+++ b/docs/assets/scss/custom.scss
@@ -29,3 +29,10 @@
     }
 }
 // ==================================================================
+
+// wider content in book layout and centering
+
+.docs-article-container{
+    max-width: 900px;
+    margin: 0px auto;
+}
