--- a/docs/assets/scss/custom.scss
+++ b/docs/assets/scss/custom.scss
@@ -35,4 +35,9 @@
 .docs-article-container{
     max-width: 900px;
     margin: 0px auto;
+
+    h2 {
+        margin-top: 2rem;
+        margin-bottom: 1rem;
+    }
 }
