--- a/sportchemy/layouts/shortcodes/sportchemy-mdtable.html
+++ b/sportchemy/layouts/shortcodes/sportchemy-mdtable.html
@@ -23,6 +23,8 @@
     noheader :
         If present, the header is removed. This is useful for markdown tables without header,
         since Hugo always renders table with it.
+    class: optional
+        Custom class to add in addition to `sportchemy-table`.
     id : optional
         Specific id for the table, useful for targetting the specifc table with CSS.
 */}}
@@ -30,6 +32,7 @@
 {{/* Add additional bootstrap classes if requested. */}}
 
 {{ $table_class := "table sportchemy-table" }}
+{{ with .Get "class" }} {{ $table_class = printf "%s %s" $table_class .}} {{ end }}
 {{ if (eq (.Get "striped" | default "true") "true") }}
     {{ $table_class = printf "%s table-striped" $table_class }}
 {{ end }}
@@ -49,14 +52,11 @@
     {{ $table_class = printf "%s table-sm" $table_class }}
 {{ end }}
 
-{{/* id */}}
-{{ $id := (.Get "id" | default "") }}
-
 {{/* Get table content and add requested classes */}}
 
 {{ $table := .Inner | markdownify }}
 {{ $attributes := printf "class=\"%s\"" $table_class }}
-{{ with $id }}{{ $attributes = printf "%s id=\"%s\"" . }}{{ end }}
+{{ with .Get "id" }}{{ $attributes = printf "%s id=\"%s\"" . }}{{ end }}
 {{ $table = replace $table "<table>" (printf "<table %s>" $attributes ) }}
 {{ if ("noheader" | in .Params) }}
     {{ $thead := index (findRE `(?s)<thead>.*</thead>` $table 1) 0 }}
