--- a/sportchemy/layouts/partials/blocks/sportchemy-collection.html
+++ b/sportchemy/layouts/partials/blocks/sportchemy-collection.html
@@ -91,14 +91,17 @@ sections:
       For instance, the default "sportchemy-card" view requires cards to be placed
       inside a <div class="row"> to display them correctly.
   */}}
-
-  {{ $view_hook := printf "partials/views/%s-hook.html" $block.design.view }}
-  {{ if templates.Exists $view_hook }}
-    {{ partial $view_hook (dict "query" $query "block" $block "view" ($block.design.view | default "sportchemy-card-view") )}}
+  {{ if gt (len $query) 0 }}
+    {{ $view_hook := printf "partials/views/%s-hook.html" $block.design.view }}
+    {{ if templates.Exists $view_hook }}
+      {{ partial $view_hook (dict "query" $query "block" $block "view" ($block.design.view | default "sportchemy-card-view") )}}
+    {{ else }}
+      {{ range $index, $item := $query }}
+        {{ partial "functions/render_view" (dict "page" $block "item" . "view" ($block.design.view | default "sportchemy-card-view") "index" $index) }}
+      {{end}}
+    {{ end }}
   {{ else }}
-    {{ range $index, $item := $query }}
-      {{ partial "functions/render_view" (dict "page" $block "item" . "view" ($block.design.view | default "sportchemy-card-view") "index" $index) }}
-    {{end}}
+    <p style="text-align: center;">{{ (i18n "sportchemy_no_games") | default "No games scheduled"}}</p>
   {{ end }}
 
   {{ with $block.content.text_below }}<p>{{ . | emojify | $page.RenderString }}</p>{{ end }}
