--- a/sportchemy/layouts/partials/views/sportchemy-table-view.html
+++ b/sportchemy/layouts/partials/views/sportchemy-table-view.html
@@ -15,8 +15,7 @@
   </td>
   <td class="team-logo"> <img src={{ $matchInfo.logoHome }}> </td>
   <td class="team-points">
-    {{/* TODO: 0 is equal to "" -> need to fix */}}
-    {{ if (eq $matchInfo.scoreHome "") | or (eq $matchInfo.scoreAway "")}}
+    {{ if (lt $matchInfo.scoreHome 0) | or (lt $matchInfo.scoreAway 0)}}
       <span>{{ time.Format $time_format $params.date }}</span>
     {{ else }}
       <span class="{{ $matchInfo.classHome }}">
