fix responsive table class

--- a/sportchemy/assets/scss/blocks/sportchemy.scss
+++ b/sportchemy/assets/scss/blocks/sportchemy.scss
@@ -61,7 +61,7 @@
 // sportchemy-table view
 .sportchemy-table {
     text-align: center;
-    border-bottom: 1px solid;
+    //border-bottom: 1px solid;
 
     td {
         vertical-align: middle;
