--- a/sportchemy/layouts/shortcodes/sportchemy-table.html
+++ b/sportchemy/layouts/shortcodes/sportchemy-table.html
@@ -72,7 +72,7 @@
     {{ if not (in "sm md lg xl" $responsive) }}
         {{ $responsive = "md"}}
     {{ end }}
-    {{ $table_class = printf "%s table-responsive-%s" $table_class $responsive }}
+    {{ $responsive = printf "table-responsive-%s" $responsive }}
 {{ end }}
 {{ if (eq (.Get "small" | default "false") "true") }}
     {{ $table_class = printf "%s table-sm" $table_class }}
@@ -88,28 +88,30 @@
 {{ end }}
 
 {{/* Add bootstrap responsive table class to enable horizontal scrolling in small screens. */}}
-<table class={{$table_class}} {{ with $halign }}style="{{.|safeCSS}}"{{ end }} {{ with .Get "id" }}id="."{{ end }}>
-    {{ if $useHeaderRow }}
-        {{ $headerRow := index $rows 0 }}
-        {{ $rows = after 1 $rows }}
-        <thead>
-            <tr> {{ range $headerRow }}
-                <th>{{ . | markdownify | emojify }}</th> {{ end }}
-            </tr>
-        </thead>
-    {{ end }}
-    {{ range $rows }}
-        <tr>
-            {{ range . }}
-                {{ if (findRE "^\\d+$" .) }}
-                    <td data-table-dtype="number">{{ . }}</td>
-                {{ else }}
-                    <td data-table-dtype="text">{{ . | markdownify | emojify }}</td>
+<div class={{$responsive}}>
+    <table class={{$table_class}} {{ with $halign }}style="{{.|safeCSS}}"{{ end }} {{ with .Get "id" }}id="."{{ end }}>
+        {{ if $useHeaderRow }}
+            {{ $headerRow := index $rows 0 }}
+            {{ $rows = after 1 $rows }}
+            <thead>
+                <tr> {{ range $headerRow }}
+                    <th>{{ . | markdownify | emojify }}</th> {{ end }}
+                </tr>
+            </thead>
+        {{ end }}
+        {{ range $rows }}
+            <tr>
+                {{ range . }}
+                    {{ if (findRE "^\\d+$" .) }}
+                        <td data-table-dtype="number">{{ . }}</td>
+                    {{ else }}
+                        <td data-table-dtype="text">{{ . | markdownify | emojify }}</td>
+                    {{ end }}
                 {{ end }}
-            {{ end }}
-        </tr>
-    {{ end }}
-    {{ if $caption }}
-        <caption>{{ $caption | markdownify | emojify }}</caption>
-    {{ end }}
-</table>
+            </tr>
+        {{ end }}
+        {{ if $caption }}
+            <caption>{{ $caption | markdownify | emojify }}</caption>
+        {{ end }}
+    </table>
+</div>
